Amélioration du frontend, du backend MQTT et nettoyage du projet